<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AKIRACHIXS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="User_name">User name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Display">Display</string>
    <string name="Back">Back</string>
    <string name="title_activity_login">Login</string>
    <string name="Verify">Verify</string>
   

</resources>
